--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.11.0",
     "react-live": "^2.1.2",
     "remark-slug": "^6.0.0",
     "stringify-object": "^3.3.0",
