Setup: Made a button in the nav for github

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "private": true,
-  "name": "yoga-sutras-of-patanjali",
+  "name": "use-auth-docs",
   "version": "0.0.1",
   "main": "index.js",
   "author": "Eric Hodges",
   "license": "MIT",
-  "description": "Yoga Sutras of Patanjali, in the tradition of T. Krishnamacharya and T.K.V. Desikachar",
+  "description": "useAuth docs",
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build",
